# IntegralMultithreading

./: CMakeLists.txt  README.md  conf.txt  conf2.txt  main.cpp
headers/: helpers.h  intergration.h
helpers/: helpers.cpp  helpers.h
sources/: helpers.cpp  intergration.cpp  multi_thread_solution.cpp  one_thread_solution.cpp
